.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:00:23 **** Incremental Build of configuration Debug for project clase 14 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nexo.o" "..\\src\\Nexo.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase 14.o" "..\\src\\clase 14.c" 
..\src\clase 14.c:107:0: warning: "TAM" redefined
 #define TAM 2
 
In file included from ..\src\Nexo.h:8:0,
                 from ..\src\NexoSegundo.h:6,
                 from ..\src\clase 14.c:106:
..\src\Producto.h:10:0: note: this is the location of the previous definition
 #define TAM 4
 
..\src\clase 14.c:108:0: warning: "TAM_TIPO" redefined
 #define TAM_TIPO 5
 
In file included from ..\src\Nexo.h:8:0,
                 from ..\src\NexoSegundo.h:6,
                 from ..\src\clase 14.c:106:
..\src\Producto.h:11:0: note: this is the location of the previous definition
 #define TAM_TIPO 4
 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Fabricante.o" "..\\src\\Fabricante.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\NexoSegundo.o" "..\\src\\NexoSegundo.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nacionalidad.o" "..\\src\\Nacionalidad.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\TipoProducto.o" "..\\src\\TipoProducto.c" 
gcc -o "clase 14.exe" "src\\Fabricante.o" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\NexoSegundo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 14.o" 
19:00:50 **** Incremental Build of configuration Debug for project clase 14 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase 14.o" "..\\src\\clase 14.c" 
gcc -o "clase 14.exe" "src\\Fabricante.o" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\NexoSegundo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 14.o" 
19:05:37 **** Incremental Build of configuration Debug for project clase 14 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase 14.o" "..\\src\\clase 14.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nexo.o" "..\\src\\Nexo.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\NexoSegundo.o" "..\\src\\NexoSegundo.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nacionalidad.o" "..\\src\\Nacionalidad.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\TipoProducto.o" "..\\src\\TipoProducto.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Fabricante.o" "..\\src\\Fabricante.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Producto.o" "..\\src\\Producto.c" 
gcc -o "clase 14.exe" "src\\Fabricante.o" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\NexoSegundo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 14.o" 
19:07:41 **** Incremental Build of configuration Debug for project clase 14 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase 14.o" "..\\src\\clase 14.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\NexoSegundo.o" "..\\src\\NexoSegundo.c" 
..\src\NexoSegundo.c:370:81: error: expected ';', ',' or ')' before '.' token
 int modificarProducto(eProducto unProducto[], int tam, eTipoProducto listaTipo[]. int tamTip, char cadena[])
                                                                                 ^
19:07:53 **** Incremental Build of configuration Debug for project clase 14 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\NexoSegundo.o" "..\\src\\NexoSegundo.c" 
gcc -o "clase 14.exe" "src\\Fabricante.o" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\NexoSegundo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 14.o" 
19:12:35 **** Incremental Build of configuration Debug for project clase 14 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Fabricante.o" "..\\src\\Fabricante.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase 14.o" "..\\src\\clase 14.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\NexoSegundo.o" "..\\src\\NexoSegundo.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\TipoProducto.o" "..\\src\\TipoProducto.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nexo.o" "..\\src\\Nexo.c" 
gcc -o "clase 14.exe" "src\\Fabricante.o" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\NexoSegundo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 14.o" 
19:13:00 **** Incremental Build of configuration Debug for project clase 14 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\NexoSegundo.o" "..\\src\\NexoSegundo.c" 
gcc -o "clase 14.exe" "src\\Fabricante.o" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\NexoSegundo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 14.o" 
19:13:26 **** Incremental Build of configuration Debug for project clase 14 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase 14.o" "..\\src\\clase 14.c" 
gcc -o "clase 14.exe" "src\\Fabricante.o" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\NexoSegundo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 14.o" 
19:14:02 **** Incremental Build of configuration Debug for project clase 14 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\TipoProducto.o" "..\\src\\TipoProducto.c" 
gcc -o "clase 14.exe" "src\\Fabricante.o" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\NexoSegundo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 14.o" 
19:29:33 **** Incremental Build of configuration Debug for project clase 14 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nexo.o" "..\\src\\Nexo.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase 14.o" "..\\src\\clase 14.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Fabricante.o" "..\\src\\Fabricante.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\NexoSegundo.o" "..\\src\\NexoSegundo.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\TipoProducto.o" "..\\src\\TipoProducto.c" 
gcc -o "clase 14.exe" "src\\Fabricante.o" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\NexoSegundo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 14.o" 
Info: Nothing to build for clase 14
Info: Nothing to build for clase 14
19:38:50 **** Incremental Build of configuration Debug for project clase 14 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\TipoProducto.o" "..\\src\\TipoProducto.c" 
gcc -o "clase 14.exe" "src\\Fabricante.o" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\NexoSegundo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 14.o" 
19:40:27 **** Incremental Build of configuration Debug for project clase 14 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\TipoProducto.o" "..\\src\\TipoProducto.c" 
gcc -o "clase 14.exe" "src\\Fabricante.o" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\NexoSegundo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 14.o" 
19:40:41 **** Incremental Build of configuration Debug for project clase 14 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\TipoProducto.o" "..\\src\\TipoProducto.c" 
gcc -o "clase 14.exe" "src\\Fabricante.o" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\NexoSegundo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 14.o" 
Info: Nothing to build for clase 14
19:50:02 **** Incremental Build of configuration Debug for project clase 14 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nacionalidad.o" "..\\src\\Nacionalidad.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase 14.o" "..\\src\\clase 14.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\TipoProducto.o" "..\\src\\TipoProducto.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Producto.o" "..\\src\\Producto.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\NexoSegundo.o" "..\\src\\NexoSegundo.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Fabricante.o" "..\\src\\Fabricante.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nexo.o" "..\\src\\Nexo.c" 
gcc -o "clase 14.exe" "src\\Fabricante.o" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\NexoSegundo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 14.o" 
Info: Nothing to build for clase 14
19:52:09 **** Incremental Build of configuration Debug for project clase 14 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Producto.o" "..\\src\\Producto.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\TipoProducto.o" "..\\src\\TipoProducto.c" 
gcc -o "clase 14.exe" "src\\Fabricante.o" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\NexoSegundo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 14.o" 
